Add a code block style

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 	</header>
 
 	<div class="content">
+		<h2>Install</h2>
+		<div class="code code-block">
+			<span class="color-murky-pond">$</span> brew install teddywing/DomeKey/dome-key
+		</div>
+
+
 		DomeKey lets you customise headphone buttons 
 	</div>
 </body>
