Add margins to headers and blocks

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 		<h2>Examples</h2>
 
 		<p>Video controls:</p>
-		<pre class="code code-block">
+		<pre class="code code-block margin-bottom-1.8">
 map &lt;Up&gt; &lt;Left&gt;
 map &lt;Play&gt; &lt;Space&gt;
 map &lt;Down&gt; &lt;Right&gt;</pre>
 
 		<p>Preserve volume buttons and include video controls in a mode:</p>
-		<pre class="code code-block">
+		<pre class="code code-block margin-bottom-1.8">
 # Don't launch iTunes when pressing the middle button
 map &lt;Play&gt; &lt;Nop&gt;
 
@@ -45,18 +45,18 @@ mode &lt;Play&gt;&lt;Play&gt; {
 }</pre>
 
 		<p>Application switcher:</p>
-		<pre class="code code-block">
+		<pre class="code code-block margin-bottom-1.8">
 map &lt;Up&gt; &lt;D-S-Tab&gt;
 map &lt;Down&gt; &lt;D-Tab&gt;</pre>
 
 		<p>Open frequently used applications:</p>
-		<pre class="code code-block">
+		<pre class="code code-block margin-bottom-1.8">
 cmd &lt;Up&gt;   open -a Terminal
 cmd &lt;Play&gt; open -a Xcode
 cmd &lt;Down&gt; open -a Firefox</pre>
 
 		<p>Open Terminal window #2:</p>
-		<pre class="code code-block">
+		<pre class="code code-block margin-bottom-1.8">
 cmd &lt;Play&gt; osascript -e 'activate application "Terminal"' -e 'tell application "System Events" to keystroke "2" using command down'</pre>
 	</div>
 </body>
