--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="content">
 		<header>
 			<h1>DomeKey</h1>
-			<img src="assets/logo.svg" alt="DomeKey" />
+			<img src="assets/logo.svg" alt="DomeKey logo" />
 		</header>
 
 		<p>
