Add some more descriptive copy to the website
Describe the program, high-level features.

Add styles:
* Fix leading
* Add list bullets that were removed by the reset

--- a/index.html
+++ b/index.html
@@ -17,7 +17,29 @@
 		</header>
 
 		<p>
-			DomeKey lets you customise headphone buttons 
+			Control your computer with a pair of headphones
+		</p>
+
+		<p>
+			DomeKey gives you the power to remap your headphone buttons to any action you
+			can think of. Define mappings in text using a Vim-like configuration language.
+		</p>
+
+		<ul>
+			<li>
+				Simulate keyboard keys to control applications or automate actions
+			</li>
+			<li>
+				Run shell commands at the press of a button
+			</li>
+			<li>
+				Define as many actions as you need by adding modes, or triggering an action
+				with a sequence of headphone buttons
+			</li>
+		</ul>
+
+		<p>
+			With up to three new button inputs, the possibilities are endless.
 		</p>
 
 		<h2>Install</h2>
