Mention free trial

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			With up to three new button inputs, the possibilities are endless.
 		</p>
 
-		<h2>Install</h2>
+		<h2>Try it free for 30 days</h2>
 		<div class="code code-block">
 			<span class="color-murky-pond">$</span> brew install teddywing/DomeKey/dome-key
 		</div>
