Add system requirements section

--- a/index.html
+++ b/index.html
@@ -80,6 +80,18 @@ cmd &lt;Down&gt; open -a Firefox</pre>
 		<p>Open Terminal window #2:</p>
 		<pre class="code code-block margin-bottom-1.8 font-size-0.8">
 cmd &lt;Play&gt; osascript -e 'activate application "Terminal"' -e 'tell application "System Events" to keystroke "2" using command down'</pre>
+
+		<h2>System requirements</h2>
+		<ul>
+			<li>
+				Mac OS X 10.8 and later
+			</li>
+			<li>
+				Wired headphones with 1–3 buttons (Bluetooth headphones are currently
+				unsupported. If you know of a way to access bluetooth headphone events,
+				please <a href="mailto:support@domekey.teddywing.com">get in touch</a>.)
+			</li>
+		</ul>
 	</div>
 </body>
 </html>
