Increase font size of subtitle

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<img src="assets/logo.svg" alt="DomeKey logo" />
 		</header>
 
-		<p>
+		<p class="font-size-1.52">
 			Control your computer with a pair of headphones
 		</p>
 
