--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>DomeKey</title>
+	<title>DomeKey – Control your computer with a pair of headphones</title>
 	<meta name="description" content="">
 
 	<meta name="viewport" content="width=device-width">
