Style "Buy" button
* Move Lucida Grande font stack to a variable
* Add buttons styles for a magenta gradiented button

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
 			<span class="color-murky-pond">$</span> brew install teddywing/DomeKey/dome-key
 		</div>
 
+		<p>
+			<a href="#" class="button">Buy ($15)</a>
+		</p>
+
 		<h2>Examples</h2>
 
 		<p>Video controls:</p>
