--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		</div>
 
 		<p>
-			<a href="#" class="button">Buy ($15)</a>
+			<a href="#" class="button button-magenta">Buy ($15)</a>
 		</p>
 
 		<h2>Examples</h2>
