Move "Buy" button to the right side of the "Try it free" header
Needed to adjust some positioning styles and fix the padding on the
button.

--- a/index.html
+++ b/index.html
@@ -42,14 +42,18 @@
 			With up to three new button inputs, the possibilities are endless.
 		</p>
 
-		<h2>Try it free for 30 days</h2>
+		<div class="position-relative margin-bottom-0.5">
+			<h2 class="display-inline-block">Try it free for 30 days</h2>
+			<a href="#"
+				class="button button-magenta
+					padding-top-9 padding-bottom-9
+					position-absolute right-0 bottom-0">
+				Buy ($15)
+			</a>
+		</div>
 		<div class="code code-block">
 			<span class="color-murky-pond">$</span> brew install teddywing/DomeKey/dome-key
 		</div>
-
-		<p>
-			<a href="#" class="button button-magenta">Buy ($15)</a>
-		</p>
 
 		<h2>Examples</h2>
 
