Add responsive breakpoints
Ensure that nothing leaves the viewable page area and that no elements
collide with one another.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 		<div class="position-relative margin-bottom-0.5">
 			<h2 class="display-inline-block">Try it free for 30 days</h2>
 			<a href="#"
-				class="button button-magenta
+				class="buy-button
+					button button-magenta
 					padding-top-9 padding-bottom-9
 					position-absolute right-0 bottom-0">
 				Buy ($15)
