Make subtitle maroon
Makes it stand out a bit differently.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<img src="assets/logo.svg" alt="DomeKey logo" />
 		</header>
 
-		<p class="font-size-1.52">
+		<p class="font-size-1.52 color-maroon">
 			Control your computer with a pair of headphones
 		</p>
 
