Add a meta description to HTML pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>DomeKey – Control your computer with a pair of headphones</title>
-	<meta name="description" content="">
+	<meta name="description" content="DomeKey gives you the power to remap your headphone buttons to any action you can think of. Define mappings in text using a Vim-like configuration language." />
 
 	<meta name="viewport" content="width=device-width">
 
