--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>404 – DomeKey</title>
-	<meta name="description" content="">
+	<meta name="description" content="DomeKey gives you the power to remap your headphone buttons to any action you can think of. Define mappings in text using a Vim-like configuration language." />
 
 	<meta name="viewport" content="width=device-width">
 
