internal_error.html: Fix logo image
Hadn't tested this when I made it. Was outputting a formatted byte
string instead of the plain base64, which resulted in `b'BASE_64'` being
inserted. Output the real base64 to get the image to decode properly.

--- a/internal_error.in.html
+++ b/internal_error.in.html
@@ -15,7 +15,7 @@
 	<div class="content">
 		<header>
 			<h1>DomeKey</h1>
-			<img src="data:image/png;base64,${LOGO_DATA}" alt="DomeKey logo" />
+			<img src="data:image/svg+xml;base64,${LOGO_DATA}" alt="DomeKey logo" />
 		</header>
 
 		<p class="font-size-1.52 color-maroon">
