Decide on an email address

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ cmd &lt;Play&gt; osascript -e 'activate application "Terminal"' -e 'tell applica
 			<li>
 				Wired headphones with 1–3 buttons (Bluetooth headphones are currently
 				unsupported. If you know of a way to access bluetooth headphone events,
-				please <a href="mailto:support@domekey.teddywing.com">get in touch</a>.)
+				please <a href="mailto:inquiry@domekey.teddywing.com">get in touch</a>.)
 			</li>
 		</ul>
 	</div>
