--- a/thank-you.html
+++ b/thank-you.html
@@ -39,7 +39,8 @@
 		</form>
 
 		<p>
-			If you need any help, <a href="">let me know</a>.
+			If you need any help,
+			<a href="mailto:inquiry@domekey.teddywing.com">let me know</a>.
 		</p>
 
 		<p>
