--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@ cmd &lt;Play&gt; osascript -e 'activate application "Terminal"' -e 'tell applica
 				please <a href="mailto:inquiry@domekey.teddywing.com">get in touch</a>.)
 			</li>
 		</ul>
+
+		<h2>Purchasing</h2>
+		<p>
+			Licenses are valid for all 1.x releases of the program.
+		</p>
 	</div>
 </body>
 </html>
