Add manual pages
Also a section linking to them on the home page.

Generated in the main DomeKey repository with:

    $ a2x --no-xmllint --format xhtml doc/dome-key.1.intermediate.txt
    $ a2x --no-xmllint --format xhtml doc/dome-key-mappings.7.txt

Deciding to go with the AsciiDoc CSS for now and not bother with making
these pages fit with the site's style to make things easy.

--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@ cmd &lt;Down&gt; open -a Firefox</pre>
 		<pre class="code code-block margin-bottom-1.8 font-size-0.8">
 cmd &lt;Play&gt; osascript -e 'activate application "Terminal"' -e 'tell application "System Events" to keystroke "2" using command down'</pre>
 
+		<h2>Manual</h2>
+		<p>
+			<a href="/doc/dome-key.1.html">dome-key(1)</a>,
+			<a href="/doc/dome-key-mappings.7.html">dome-key-mappings(7)</a>
+		</p>
+
 		<h2>System requirements</h2>
 		<ul>
 			<li>
