index.html: Add an extra command to the 'frequently used' example
Give an example of a multi-button trigger mapping.

--- a/index.html
+++ b/index.html
@@ -83,9 +83,10 @@ map &lt;Down&gt; &lt;D-Tab&gt;</pre>
 
 		<p>Open frequently used applications:</p>
 		<pre class="code code-block margin-bottom-1.8 font-size-0.8">
-cmd &lt;Up&gt;   open -a Terminal
-cmd &lt;Play&gt; open -a Xcode
-cmd &lt;Down&gt; open -a Firefox</pre>
+cmd &lt;Up&gt;       open -a Terminal
+cmd &lt;Play&gt;     open -a Xcode
+cmd &lt;Down&gt;     open -a Firefox
+cmd &lt;Up&gt;&lt;Play&gt; open -a Dictionary</pre>
 
 		<p>Open Terminal window #2:</p>
 		<pre class="code code-block margin-bottom-1.8 font-size-0.8">
