index.html: Add a section describing the Vim syntax plugin

--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@ cmd &lt;Play&gt; osascript -e 'activate application "Terminal"' -e 'tell applica
 			<a href="/doc/dome-key-mappings.7.html">dome-key-mappings(7)</a>
 		</p>
 
+		<h2>Editor plugin</h2>
+		<p>
+			A <a href="https://github.com/teddywing/vim-dome-key">Vim syntax plugin</a>
+			is available for the DomeKey mapping syntax.
+		</p>
+
 		<h2>System requirements</h2>
 		<ul>
 			<li>
