index.html: Add demo video
Not committing the video files. They're only 3 & 4 megabytes each, but
that still seems a bit too much to keep in version control.

Add the video to the home page and center it in the content area. We
give it a negative margin to center it since it's wider than the
container.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
 			Control your computer with a pair of headphones
 		</p>
 
+		<video controls preload class="margin-left-neg-12.5%">
+			<source src="/assets/DomeKey-Screencast.mp4" type="video/mp4" />
+			<source src="/assets/DomeKey-Screencast.webm" type="video/webm" />
+
+			<p>
+				<a href="/assets/DomeKey-Screencast.mp4">Demo video</a>
+			</p>
+		</video>
+
 		<p>
 			DomeKey gives you the power to remap your headphone buttons to any action you
 			can think of. Define mappings in text using a Vim-like configuration language.
