--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 	<link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
+	<div style="
+		padding: 10px 12px;
+		background-color: red;
+		font-weight: bold;
+		text-transform: uppercase;
+		color: white;
+	">
+		This is a preview. The installation command is not yet activated.
+	</div>
+
 	<div class="content">
 		<header>
 			<h1>DomeKey</h1>
