thank-you.html: Educate apostrophe

--- a/thank-you.html
+++ b/thank-you.html
@@ -46,7 +46,7 @@
 		<p>
 			Also, check out the
 			<a href="https://github.com/teddywing/DomeKey">source code</a>
-			if you're interested.
+			if you’re interested.
 		</p>
 	</div>
 </body>
