Make the logo link to the home page
Do this on all pages that aren't the home page.

--- a/internal_error.in.html
+++ b/internal_error.in.html
@@ -14,8 +14,10 @@
 <body>
 	<div class="content">
 		<header>
-			<h1>DomeKey</h1>
-			<img src="data:image/svg+xml;base64,${LOGO_DATA}" alt="DomeKey logo" />
+			<a href="/">
+				<h1>DomeKey</h1>
+				<img src="data:image/svg+xml;base64,${LOGO_DATA}" alt="DomeKey logo" />
+			</a>
 		</header>
 
 		<p class="font-size-1.52 color-maroon">
