--- a/thank-you.html
+++ b/thank-you.html
@@ -12,8 +12,10 @@
 <body>
 	<div class="content">
 		<header>
-			<h1>DomeKey</h1>
-			<img src="assets/logo.svg" alt="DomeKey logo" />
+			<a href="/">
+				<h1>DomeKey</h1>
+				<img src="assets/logo.svg" alt="DomeKey logo" />
+			</a>
 		</header>
 
 		<p class="font-size-1.52 color-maroon">
