/license: Add install & license instructions
Add the instructions we put in the fulfillment email to the
thank-you/license download page. Want to make sure buyers know how to
license the software after purchasing it.

Rephrase the install text to be simpler and more to the point.

--- a/thank-you-license-download.html
+++ b/thank-you-license-download.html
@@ -41,6 +41,23 @@
 		</form>
 
 		<p>
+			Install DomeKey with:
+		</p>
+
+		<div class="code code-block">
+			<span class="color-murky-pond">$</span> brew install teddywing/DomeKey/dome-key
+		</div>
+
+		<p>
+			Add your license by running:
+		</p>
+
+		<div class="code code-block">
+			<span class="color-murky-pond">$</span>
+			dome-key --license PATH/TO/dome-key-license.plist
+		</div>
+
+		<p>
 			If you need any help,
 			<a href="mailto:inquiry@domekey.teddywing.com">let me know</a>.
 		</p>
