index.html: Don't scroll to the top when clicking the "Buy" button
The scroll position is now kept when the modal overlay opens.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 		<div class="position-relative margin-bottom-0.5">
 			<h2 class="display-inline-block">Try it free for 30 days</h2>
-			<a href="#"
+			<a href="#!"
 				class="buy-button
 					button button-magenta
 					padding-top-9 padding-bottom-9
