index.html: Set exact dimensions
Otherwise it gets rendered small when the page first loads, then expands
to the correct dimensions after the page has loaded. This removes the
jump-cut effect.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			Control your computer with a pair of headphones
 		</p>
 
-		<video controls preload class="margin-left-neg-12.5%">
+		<video controls preload width="842" height="518" class="margin-left-neg-12.5%">
 			<source src="/assets/DomeKey-Screencast.mp4" type="video/mp4" />
 			<source src="/assets/DomeKey-Screencast.webm" type="video/webm" />
 
