index.html: Add `brew services start` command to install instructions
Since the program doesn't work unless the daemon is launched, it makes
sense that this should be an installation step in order to actually use
the program.

--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
 		</div>
 		<div class="code code-block">
 			<span class="color-murky-pond">$</span> brew install teddywing/DomeKey/dome-key
+			<br />
+			<span class="color-murky-pond">$</span> brew services start teddywing/DomeKey/dome-key
 		</div>
 
 		<h2>Examples</h2>
