Prevent selection of '$' in shell commands
Now that it takes two commands to install the program, make it easier
for visitors to copy-paste the commands into their shell by preventing
selection of the '$' prompt character.

This allows us to keep the prompt to indicate that these are shell
commands and still make copy-pasting easier.

As a side note, decided not to add the `brew services` command to the
instructions on the thank-you page because if DomeKey is already
running when you license it, you need to restart it for the license to
take effect.

--- a/index.html
+++ b/index.html
@@ -74,9 +74,13 @@
 			</a>
 		</div>
 		<div class="code code-block">
-			<span class="color-murky-pond">$</span> brew install teddywing/DomeKey/dome-key
+			<span class="shell-command">
+				brew install teddywing/DomeKey/dome-key
+			</span>
 			<br />
-			<span class="color-murky-pond">$</span> brew services start teddywing/DomeKey/dome-key
+			<span class="shell-command">
+				brew services start teddywing/DomeKey/dome-key
+			</span>
 		</div>
 
 		<h2>Examples</h2>
