--- a/thank-you-license-download.html
+++ b/thank-you-license-download.html
@@ -45,7 +45,7 @@
 		</p>
 
 		<div class="code code-block">
-			<span class="color-murky-pond">$</span> brew install teddywing/DomeKey/dome-key
+			<span class="shell-command">brew install teddywing/DomeKey/dome-key</span>
 		</div>
 
 		<p>
@@ -53,8 +53,9 @@
 		</p>
 
 		<div class="code code-block">
-			<span class="color-murky-pond">$</span>
-			dome-key --license PATH/TO/dome-key-license.plist
+			<span class="shell-command">
+				dome-key --license PATH/TO/dome-key-license.plist
+			</span>
 		</div>
 
 		<p>
