Add `brew services` commands to thank-you & fulfillment instructions
Include the new step 2 of installation, starting the program with `brew
services`.

After the license has been added, the daemon must be restarted in order
for the license to be recognised.

--- a/thank-you-license-download.html
+++ b/thank-you-license-download.html
@@ -46,6 +46,10 @@
 
 		<div class="code code-block">
 			<span class="shell-command">brew install teddywing/DomeKey/dome-key</span>
+			<br />
+			<span class="shell-command">
+				brew services start teddywing/DomeKey/dome-key
+			</span>
 		</div>
 
 		<p>
@@ -55,6 +59,10 @@
 		<div class="code code-block">
 			<span class="shell-command">
 				dome-key --license PATH/TO/dome-key-license.plist
+			</span>
+			<br />
+			<span class="shell-command">
+				brew services restart teddywing/DomeKey/dome-key
 			</span>
 		</div>
 
