index.html: Fix fallback link to demo video
Forgot to update this link when I renamed the video files.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<source src="/assets/DomeKey-Screencast.mpeg4.mp4" type="video/mp4" />
 
 			<p>
-				<a href="/assets/DomeKey-Screencast.mp4">Demo video</a>
+				<a href="/assets/DomeKey-Screencast.mpeg4.mp4">Demo video</a>
 			</p>
 		</video>
 
